# ccr-rust

./: .gitignore  .sloc-guard.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.example.json  config.gemini.json  deny.toml
benches/: concurrent_streams.rs
docs/: claude_code_setup.md  codex_setup.md  gemini-integration.md  index.md  kimi_setup.md  lessons_learned.md  observability.md  openai_sdk_setup.md  qwen-coding-plan.md  token_optimization.md  troubleshooting.md
src/: config.rs  dashboard.rs  debug_capture.rs  google_oauth.rs  gp_router.rs  lib.rs  main.rs  proxy.rs  ratelimit.rs  router.rs  routing.rs  schema_validate.rs  sse.rs  transformer.rs  turn_capture.rs
src/config/: mod.rs  types.rs
src/frontend/: claude_code.rs  codex.rs  detection.rs  mod.rs
src/mcp/: backend.rs  catalog.rs  mod.rs  protocol.rs  server.rs
src/metrics/: handlers.rs  mod.rs  persistence.rs
src/router/: dispatch.rs  mod.rs  openai_compat.rs  responses_api.rs  streaming.rs  translate_request.rs  translate_response.rs  types.rs
src/transform/: anthropic.rs  anthropic_to_openai.rs  deepseek.rs  gemini.rs  glm.rs  kimi.rs  maxtoken.rs  minimax.rs  mod.rs  openai.rs  output_compress.rs  registry.rs  thinktag.rs  toolcompress.rs
src/transform/openai_to_anthropic/: helpers.rs  mod.rs
src/transform/output_compress/: mod.rs
src/transform/output_compress/patterns/: cargo.rs  git.rs  grep.rs  mod.rs  npm.rs  test_runner.rs
src/transformer/: builtin.rs  mod.rs
tests/: integration_claude_code.rs  integration_codex.rs  integration_codex_openai_stream.rs  integration_codex_stream.rs  integration_kimi.rs  integration_responses.rs  lib.rs  reasoning_normalization_test.rs  test_ratelimit_phantom.rs  test_routing.rs  test_shutdown.rs
tests/mocks/: claude_code_client.rs  codex_client.rs
