[package]
name = "ccr-rust"
version = "1.1.1"
edition = "2021"
authors = ["RESMP-DEV"]
description = "Claude Code Router in Rust - high-throughput SSE proxy for agent swarms"
license = "MIT"
repository = "https://github.com/resmp-dev/ccr-rust"

[features]
default = ["dashboard"]
dashboard = ["dep:ratatui", "dep:crossterm"]

[dependencies]
tokio = { version = "1.43", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.12", default-features = false, features = [
    "stream",
    "json",
    "http2",
    "blocking",
    "rustls-tls",
    "charset",
    "macos-system-configuration",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
bytes = "1.10"
futures = "0.3"
prometheus = "0.13"
lazy_static = "1.5"
clap = { version = "4.5", features = ["derive", "env"] }
shellexpand = "3.1"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "io"] }
tiktoken-rs = "0.9"
parking_lot = "0.12"
humantime = "2.1"
regex = "1.11"
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
zstd = "0.13"
redis = "0.32"
chrono = "0.4"
dirs = "6"
jsonschema = "0.29"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
wiremock = "0.6"
http-body-util = "0.1"
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "ccr-stress"
path = "src/bin/stress.rs"

[[bench]]
name = "concurrent_streams"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
