[package]
name = "ccr-rust"
version = "0.1.0"
edition = "2021"
authors = ["RESMP-DEV"]
license = "AGPL-3.0-or-later"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-util = "0.7"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
redis = { version = "0.24", features = ["json"] }
once_cell = "1.19"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
prometheus = "0.13"
shell_escape = "0.1"
regex = "1.10"
lazy_static = "1.4"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
env_logger = "0.11"
log = "0.4"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"
smallvec = "1.13"
pathbuf-operations = "0.1"
indoc = "2.0"
num_cpus = "1.16"
parking_lot = "0.12"
poll-promise = "0.1.0"
ratatui = { version = "0.25", features = ["serde"] }
compact_str = "0.7"
rustflags = "0.1"
flate2 = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
