[package]
name = "ccr-rust"
version = "1.3.0"
edition = "2021"
authors = ["RESMP-DEV"]
license = "AGPL-3.0-or-later"
description = "Multi-provider LLM router with automatic failover, streaming, and observability"
repository = "https://github.com/RESMP-DEV/ccr-rust"
keywords = ["llm", "router", "proxy", "anthropic", "openai"]
categories = ["web-programming", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.21"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
colored = "2.1"
crossterm = "0.29"
dirs = "6"
env_logger = "0.11"
flate2 = "1.0"
futures = "0.3"
gp-routing = { path = "../gp-routing" }
hex = "0.4"
humantime = "2"
jsonschema = "0.29"
lazy_static = "1.4"
log = "0.4"
num_cpus = "1.16"
once_cell = "1.19"
parking_lot = "0.12"
prometheus = "0.14"                                                 # CVE-2025-53605: requires protobuf >=3.7.2
rand = "0.8"
ratatui = { version = "0.25", features = ["serde"] }
redis = { version = "0.24", features = ["json"] }
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shellexpand = "3"
smallvec = "1.13"
tiktoken-rs = "0.9"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
zstd = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
wiremock = "0.6"

[[bench]]
name = "concurrent_streams"
harness = false

[features]
default = ["dashboard"]
dashboard = ["reqwest/blocking"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
